<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/white_background"
            android:padding="0dp">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutDescription="@xml/fragment_representative_scene"
                app:layout_scrollFlags="scroll|snap|enterAlwaysCollapsed|exitUntilCollapsed">

                <TextView
                    android:id="@+id/search_title"
                    style="@style/TextViewBigTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/representative_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_title" />

                <EditText
                    android:id="@+id/address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/constraint_match_parent"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="@dimen/constraint_match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    app:layout_constraintEnd_toStartOf="@id/state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2" />
                <Spinner
                    android:id="@+id/state"
                    android:layout_width="@dimen/constraint_match_parent"
                    android:layout_height="@dimen/constraint_match_parent"
                    android:autofillHints=""
                    android:entries="@array/state_of_usa"
                    android:inputType="textPostalAddress"
                    app:layout_constraintBottom_toBottomOf="@id/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintTop_toTopOf="@id/city" />

                <EditText
                    android:id="@+id/zip"
                    android:layout_width="@dimen/constraint_match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="number"
                    android:maxLength="5"
                    app:layout_constraintEnd_toEndOf="@id/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city" />

                <Button
                    android:id="@+id/button_search"
                    style="@style/TopClassicButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_my_representatives"
                    app:layout_constraintTop_toBottomOf="@id/zip" />

                <Button
                    android:id="@+id/button_location"
                    style="@style/TopClassicButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_my_location"
                    app:layout_constraintTop_toBottomOf="@id/button_search" />

            </androidx.constraintlayout.motion.widget.MotionLayout>

            <TextView
                android:id="@+id/representative_title"
                style="@style/TextViewBigTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_location" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/small_margin_value"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>